--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 p{color="red"}
 #demotext {
 color: #FFFFFF;
+background color: #FFFFFF;  
 text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px 0px 20px, #FF2D95 0px 0px 30px, #FF2D95 0px 0px 40px, #FF2D95 0px 0px 50px, #FF2D95 0px 0px 75px;
 color: #FFFFFF;
+background color: #FFFFFF;  
 }
 
 background-color:#FFFF00;
