--- a/style.css
+++ b/style.css
@@ -6,9 +6,4 @@ color: #FFFFFF;
 background: #333333;  
 }
 
-#demo {
-background: #000000;
-background: -moz-linear-gradient(left, #000000 0%, #6F6E16 50%, #FFFB44 100%);
-background: -webkit-linear-gradient(left, #000000 0%, #6F6E16 50%, #FFFB44 100%);
-background: linear-gradient(to right, #000000 0%, #6F6E16 50%, #FFFB44 100%);
-}
+background-color:#FFFF00;
