--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px
 color: #FFFFFF;
 
 body {
-  background-color:blue;
+  background-color: Blue;
 }
