--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@ color: #FFFFFF;
 body {
   background-color:0000FF;
 }
+
+#demoFont {
+font-family: Georgia, serif;
+font-size: 25px;
+letter-spacing: 2px;
+word-spacing: 2px;
+color: #000000;
+font-weight: normal;
+text-decoration: line-through solid rgb(68, 68, 68);
+font-style: normal;
+font-variant: normal;
+text-transform: capitalize;
+}
