--- a/style.css
+++ b/style.css
@@ -19,4 +19,24 @@ text-transform: capitalize;
 
 body {
 background-color:RoyalBlue;
-}  
+}
+
+#navbar {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        width: 100px;
+      }
+      #navbar li {
+        border-left: 10px solid #666;
+        border-bottom: 1px solid #666;
+      }
+      #navbar a {
+        background-color: #949494;
+        color: #fff;
+        padding: 5px;
+        text-decoration: none;
+        font-weight: bold;
+        border-left: 5px solid #33ADFF;
+        display: block;
+      }
