--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ background-color:RoyalBlue;
         display: block;
       }
 
+div {
+    width: 100px;
+    height: 100px;
+    background: red;
+    -webkit-transition: width 2s; /* Safari */
+    transition: width 2s;
+}
+
+#div2 {transition-timing-function: ease-in-out;}
