--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ background-color:RoyalBlue;
         display: block;
       }
 
-#transition {
+#div {
     width: 100px;
     height: 100px;
     background: red;
@@ -49,4 +49,4 @@ background-color:RoyalBlue;
     transition: width 2s;
 }
 
-#div2 {transition-timing-function: ease-in-out;}
+#div1 {transition-timing-function: ease-in-out;}
