--- a/style.css
+++ b/style.css
@@ -41,12 +41,13 @@ background-color:RoyalBlue;
         display: block;
       }
 
-#transition {
+div {
     width: 100px;
     height: 100px;
     background: red;
     -webkit-transition: width 2s; /* Safari */
     transition: width 2s;
 }
+{transition-timing-function: ease-in-out;}
 
 
