--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ div1 {
     width: 100px;
     height: 100px;
     background: red;
-    -webkit-transition: width 2s; /* Safari */
+    -webkit-transition: width 2s; 
     transition: width 2s;
 }
 #div2 {transition-timing-function: ease-in-out;}
