--- a/style.css
+++ b/style.css
@@ -41,13 +41,14 @@ background-color:RoyalBlue;
         display: block;
       }
 
-div:hover {
-    width: 100px;
-    height: 100px;
-    background: red;
-    -webkit-transition: width 2s; 
-    transition: width 2s;
-}
-#div1 {transition-timing-function: ease-in-out;}
-
-
+.block-animation {
+          width: 130px;
+          height: 130px;
+          background-color: #008000;
+transition: width 1s cubic-bezier(0, 0, 1, 1) 500ms;
+        }
+        
+        .block-animation:hover {
+          width: 230px;
+          background-color: #FFD700
+        }
