--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ background-color:RoyalBlue;
           width: 130px;
           height: 130px;
           background-color: #008000;
-transition: width 1s cubic-bezier(0, 0, 1, 1) 500ms;
+transition: width 1s cubic-bezier(0, 0, 1, 1);
+  transition: background-color 1s linear;
         }
         
         .block-animation:hover {
