--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px
 color: #FFFFFF; 
 }
 
-a :hover
+a :hover #img1
 {transform scale(2)}
 
 #demoFont {
